# pdf-ecdsa-signer

./: .gitignore  README.md  pdf-ecdsa-signer.py  pyproject.toml  signer_config.json.template
